tests/frontend/pass/safemath/safemathraw.act
behaviour add of SafeAdd
interface add(uint256 x, uint256 y)

iff
    inRange(uint256, x + y)
    CALLVALUE == 0

returns x + y
