tests/frontend/fail/typecheck/mismatched_equality.act
constructor of Fail
interface constructor(string y)

creates

  uint x := 0

ensures

  post(x) == y
